# module-cli

./: .dockerignore  .gitignore  MANIFEST.in  README.md  build.py  build.sh  dockerfile  setup.py  test.sh
cmd/: __init__.py  module_edit.py
cmd/base/: __init__.py  base.py  confirm.py  container.py  lock.py
cmd/container/: __init__.py  build_docker.py  deploy.py  run_docker.py  validate.py
cmd/init/: init_dir.py  init_docker.py  init_lock.py  init_manifest.py  init_workdir.py
cmd/templates/: .dockerignore.tmp  dockerfile.tmp  run_template.txt
cmd/testing/: base.py  make_test.py  test_all.py  test_refresh.py  test_reset_all.py
module_cli/: __init__.py  module_edit.py
module_cli/base/: __init__.py  confirm.py  container.py  lock.py
module_cli/container/: build_docker.py  (+2 more)
module_test/: package-lock.json  package.json  tsconfig.json
package/: .dockerignore  .env  dockerfile  main.py  pyproject.toml  run.sh  server.py  socket_server.py
package/Frontend/static/css/: 260.75fd785c.chunk.css  44.0a54d2db.chunk.css  960.d522d18b.chunk.css
package/Frontend/static/js/: 120.cdf131b7.chunk.js  120.cdf131b7.chunk.js.map  224.f4fec325.chunk.js.map  260.f0d7c405.chunk.js  308.9e7c85b1.chunk.js  32.e53b0d61.chunk.js  356.370c7490.chunk.js.map  436.26cc51b0.chunk.js  436.26cc51b0.chunk.js.map  44.bf2dd59b.chunk.js.map  592.a9fa22ed.chunk.js  592.a9fa22ed.chunk.js.map  660.0d61eb14.chunk.js  720.941dc489.chunk.js  76.ed747c49.chunk.js.map  802.f016e308.chunk.js.map  860.36c7ad75.chunk.js.map  916.b796f41b.chunk.js  main.34407a05.js
socket/: pyproject.toml  server.py
(+121 files in other folders)
