[tool.poetry]
name = "module cli"
version = "0.1.0"
description = "Frontend testing for module-api"
authors = ["naxhax <nathan@calici.co>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
